# Clarity_AI

./: .env  README.md  ai_agents.py  api_routes.py  app.py  auth.py  models.py  notifications.py  pyproject.toml
.local/state/replit/agent/: requirements.txt
attached_assets/: Pasted-Build-a-PYTHON-app-with-Google-Authentication-where-users-log-in-and-access-a-dashboard-for-customer-1756024272664_1756024272665.txt
static/: app.js  index.html  style.css
